K8s/03-stack-apache-tomcat/deploy.yml
# -------------------------------------------------------------------------------------------------
# Apache
# -------------------------------------------------------------------------------------------------

##
# Deployment
##
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  labels:
    app: apache
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: cafeduke/apache:latest
          imagePullPolicy: Never
          ports:
            - name: hh-port
              containerPort: 8801
            - name: hs-port
              containerPort: 8802
            - name: ss-port
              containerPort: 7701
            - name: sh-port
              containerPort: 7702
          volumeMounts:
            - name: apache-conf-volume
              mountPath: /usr/local/apache2/conf
      volumes:
        - name: apache-conf-volume
          configMap:
            name: apache-conf-configmap
---

##
# Service
##
apiVersion: v1
kind: Service
metadata:
  name: apache-service
spec:
  selector:
    app: apache
  type: LoadBalancer          # Change to 'LoadBalancer' for testing
  ports:
    - name: hh-port
      protocol: TCP
      port: 8801
      targetPort: 8801
      nodePort: 30081
    - name: hs-port
      protocol: TCP
      port: 8802
      targetPort: 8802
      nodePort: 30082
    - name: ss-port
      protocol: TCP
      port: 7701
      targetPort: 7701
      nodePort: 30071
    - name: sh-port
      protocol: TCP
      port: 7702
      targetPort: 7702
      nodePort: 30072

# -------------------------------------------------------------------------------------------------
# Tomcat
# -------------------------------------------------------------------------------------------------

---
##
# Deployment
##
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  labels:
    app: tomcat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
        - name: tomcat
          image: cafeduke/tomcat:9
          imagePullPolicy: Never
          ports:
            - name: plain-port
              containerPort: 18801
            - name: secure-port
              containerPort: 17701

---
##
# Service
##
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
spec:
  selector:
    app: tomcat
  type: ClusterIP          # Change to 'LoadBalancer' for testing
  ports:
    - name: plain-port
      protocol: TCP
      port: 18801
      targetPort: 18801
      #nodePort: 30881
    - name: secure-port
      protocol: TCP
      port: 17701
      targetPort: 17701
      #nodePort: 30771
---
